@@ -21,10 +21,8 @@
 
 package io.crate.analyze;
 
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import io.crate.analyze.expressions.TableReferenceResolver;
+import io.crate.common.annotations.VisibleForTesting;
 import io.crate.exceptions.ColumnUnknownException;
 import io.crate.expression.scalar.cast.CastFunctionResolver;
 import io.crate.expression.symbol.RefVisitor;
@@ -196,7 +194,7 @@ public class AnalyzedTableElements<T> {
         if (partitionedBy == null) {
             partitionedBy = new ArrayList<>(partitionedByColumns.size());
             for (AnalyzedColumnDefinition<T> partitionedByColumn : partitionedByColumns) {
-                partitionedBy.add(ImmutableList.of(
+                partitionedBy.add(List.of(
                     partitionedByColumn.ident().fqn(), partitionedByColumn.typeNameForESMapping()));
             }
         }
@@ -389,12 +387,15 @@ public class AnalyzedTableElements<T> {
             } else {
                 columnDataType = definedType;
             }
-            Preconditions.checkArgument(
-                valueType.isConvertableTo(columnDataType),
-                "expression value type '%s' not supported for conversion to '%s'",
-                valueType, columnDataType.getName());
+            if (!valueType.isConvertableTo(columnDataType, false)) {
+                throw new IllegalArgumentException(String.format(Locale.ENGLISH,
+                    "expression value type '%s' not supported for conversion to '%s'",
+                    valueType, columnDataType.getName())
+                );
+            }
 
-            Symbol castFunction = CastFunctionResolver.generateCastFunction(function, columnDataType, false);
+            Symbol castFunction = CastFunctionResolver
+                .generateCastFunction(function, columnDataType);
             formattedExpression = castFunction.toString(Style.UNQUALIFIED);
         } else {
             if (valueType instanceof ArrayType) {
@@ -523,8 +524,9 @@ public class AnalyzedTableElements<T> {
                                                    ColumnIdent partitionedByIdent,
                                                    boolean skipIfNotFound,
                                                    RelationName relationName) {
-        Preconditions.checkArgument(!partitionedByIdent.name().startsWith("_"),
-                                    "Cannot use system columns in PARTITIONED BY clause");
+        if (partitionedByIdent.name().startsWith("_")) {
+            throw new IllegalArgumentException("Cannot use system columns in PARTITIONED BY clause");
+        }
 
         // need to call primaryKeys() before the partition column is removed from the columns list
         if (!primaryKeys(elements).isEmpty() && !primaryKeys(elements).contains(partitionedByIdent.fqn())) {
@@ -540,7 +542,7 @@ public class AnalyzedTableElements<T> {
             }
             throw new ColumnUnknownException(partitionedByIdent.sqlFqn(), relationName);
         }
-        DataType columnType = columnDefinition.dataType();
+        DataType<?> columnType = columnDefinition.dataType();
         if (!DataTypes.isPrimitive(columnType)) {
             throw new IllegalArgumentException(String.format(Locale.ENGLISH,
                                                              "Cannot use column %s of type %s in PARTITIONED BY clause",
