@@ -22,9 +22,6 @@
 
 package io.crate.analyze.expressions;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import io.crate.action.sql.Option;
 import io.crate.analyze.DataTypeAnalyzer;
@@ -43,6 +40,7 @@ import io.crate.analyze.validator.SemanticSortValidator;
 import io.crate.exceptions.ColumnUnknownException;
 import io.crate.exceptions.ConversionException;
 import io.crate.execution.engine.aggregation.impl.CollectSetAggregation;
+import io.crate.expression.eval.EvaluatingNormalizer;
 import io.crate.expression.operator.AllOperator;
 import io.crate.expression.operator.AndOperator;
 import io.crate.expression.operator.EqOperator;
@@ -59,7 +57,7 @@ import io.crate.expression.scalar.SubscriptFunctions;
 import io.crate.expression.scalar.arithmetic.ArrayFunction;
 import io.crate.expression.scalar.arithmetic.MapFunction;
 import io.crate.expression.scalar.arithmetic.NegateFunctions;
-import io.crate.expression.scalar.cast.CastFunctionResolver;
+import io.crate.expression.scalar.cast.CastMode;
 import io.crate.expression.scalar.conditional.IfFunction;
 import io.crate.expression.scalar.timestamp.CurrentTimestampFunction;
 import io.crate.expression.symbol.Function;
@@ -102,6 +100,7 @@ import io.crate.sql.tree.FunctionCall;
 import io.crate.sql.tree.IfExpression;
 import io.crate.sql.tree.InListExpression;
 import io.crate.sql.tree.InPredicate;
+import io.crate.sql.tree.IntegerLiteral;
 import io.crate.sql.tree.IntervalLiteral;
 import io.crate.sql.tree.IsNotNullPredicate;
 import io.crate.sql.tree.IsNullPredicate;
@@ -154,6 +153,7 @@ import static io.crate.sql.tree.IntervalLiteral.IntervalField.MINUTE;
 import static io.crate.sql.tree.IntervalLiteral.IntervalField.MONTH;
 import static io.crate.sql.tree.IntervalLiteral.IntervalField.SECOND;
 import static io.crate.sql.tree.IntervalLiteral.IntervalField.YEAR;
+import static java.util.stream.Collectors.toList;
 
 /**
  * <p>This Analyzer can be used to convert Expression from the SQL AST into symbols.</p>
@@ -165,13 +165,12 @@ import static io.crate.sql.tree.IntervalLiteral.IntervalField.YEAR;
  */
 public class ExpressionAnalyzer {
 
-    private static final Map<ComparisonExpression.Type, ComparisonExpression.Type> SWAP_OPERATOR_TABLE =
-        ImmutableMap.<ComparisonExpression.Type, ComparisonExpression.Type>builder()
-            .put(ComparisonExpression.Type.GREATER_THAN, ComparisonExpression.Type.LESS_THAN)
-            .put(ComparisonExpression.Type.LESS_THAN, ComparisonExpression.Type.GREATER_THAN)
-            .put(ComparisonExpression.Type.GREATER_THAN_OR_EQUAL, ComparisonExpression.Type.LESS_THAN_OR_EQUAL)
-            .put(ComparisonExpression.Type.LESS_THAN_OR_EQUAL, ComparisonExpression.Type.GREATER_THAN_OR_EQUAL)
-            .build();
+    public static final Map<ComparisonExpression.Type, ComparisonExpression.Type> SWAP_OPERATOR_TABLE = Map.of(
+        ComparisonExpression.Type.GREATER_THAN, ComparisonExpression.Type.LESS_THAN,
+        ComparisonExpression.Type.LESS_THAN, ComparisonExpression.Type.GREATER_THAN,
+        ComparisonExpression.Type.GREATER_THAN_OR_EQUAL, ComparisonExpression.Type.LESS_THAN_OR_EQUAL,
+        ComparisonExpression.Type.LESS_THAN_OR_EQUAL, ComparisonExpression.Type.GREATER_THAN_OR_EQUAL
+    );
 
     private final CoordinatorTxnCtx coordinatorTxnCtx;
     private final ParamTypeHints paramTypeHints;
@@ -219,7 +218,12 @@ public class ExpressionAnalyzer {
      * Functions with constants will be normalized.
      */
     public Symbol convert(Expression expression, ExpressionAnalysisContext expressionAnalysisContext) {
-        return expression.accept(innerAnalyzer, expressionAnalysisContext);
+        var symbol = expression.accept(innerAnalyzer, expressionAnalysisContext);
+        var normalizer = EvaluatingNormalizer.functionOnlyNormalizer(
+            functions,
+            f -> expressionAnalysisContext.isEagerNormalizationAllowed() && f.info().isDeterministic()
+        );
+        return normalizer.normalize(symbol, coordinatorTxnCtx);
     }
 
     public Symbol generateQuerySymbol(Optional<Expression> whereExpression, ExpressionAnalysisContext context) {
@@ -396,8 +400,9 @@ public class ExpressionAnalyzer {
      * @return A new list with the casted symbols.
      */
     private static List<Symbol> cast(List<Symbol> symbolsToCast, List<DataType> targetTypes) {
-        Preconditions.checkState(symbolsToCast.size() == targetTypes.size(),
-            "Given symbol list has to match the target type list.");
+        if (symbolsToCast.size() != targetTypes.size()) {
+            throw new IllegalStateException("Given symbol list has to match the target type list.");
+        }
         int size = symbolsToCast.size();
         List<Symbol> castList = new ArrayList<>(size);
         for (int i = 0; i < size; i++) {
@@ -406,7 +411,7 @@ public class ExpressionAnalyzer {
             if (targetType.id() == UndefinedType.ID) {
                 castList.add(symbolToCast);
             } else {
-                castList.add(symbolToCast.cast(targetType, false));
+                castList.add(symbolToCast.cast(targetType));
             }
         }
         return castList;
@@ -506,7 +511,7 @@ public class ExpressionAnalyzer {
             Symbol caseOperand = convert(node.getOperand(), context);
             for (WhenClause whenClause : whenClauses) {
                 Symbol whenOperand = convert(whenClause.getOperand(), context);
-                operands.add(allocateFunction(EqOperator.NAME, ImmutableList.of(caseOperand, whenOperand), context));
+                operands.add(allocateFunction(EqOperator.NAME, List.of(caseOperand, whenOperand), context));
                 results.add(convert(whenClause.getResult(), context));
             }
             ensureResultTypesMatch(results);
@@ -551,7 +556,9 @@ public class ExpressionAnalyzer {
             for (int i = operands.size() - 1 ; i >= 0; i--) {
                 Symbol operand = operands.get(i);
                 Symbol result = results.get(i);
-                List<Symbol> arguments = Lists.newArrayList(operand, result);
+                List<Symbol> arguments = new ArrayList<>();
+                arguments.add(operand);
+                arguments.add(result);
                 if (lastSymbol != null) {
                     arguments.add(lastSymbol);
                 }
@@ -563,22 +570,28 @@ public class ExpressionAnalyzer {
         @Override
         protected Symbol visitCast(Cast node, ExpressionAnalysisContext context) {
             DataType<?> returnType = DataTypeAnalyzer.convert(node.getType());
-            return node.getExpression().accept(this, context).cast(returnType, false);
+            return node.getExpression()
+                .accept(this, context)
+                .cast(
+                    returnType,
+                    CastMode.EXPLICIT
+                );
         }
 
         @Override
         protected Symbol visitTryCast(TryCast node, ExpressionAnalysisContext context) {
             DataType<?> returnType = DataTypeAnalyzer.convert(node.getType());
-
-            if (CastFunctionResolver.supportsExplicitConversion(returnType)) {
-                try {
-                    return node.getExpression().accept(this, context).cast(returnType, true);
-                } catch (ConversionException e) {
-                    return Literal.NULL;
-                }
+            try {
+                return node.getExpression()
+                    .accept(this, context)
+                    .cast(
+                        returnType,
+                        CastMode.EXPLICIT,
+                        CastMode.TRY
+                    );
+            } catch (ConversionException e) {
+                return Literal.NULL;
             }
-            throw new IllegalArgumentException(
-                String.format(Locale.ENGLISH, "No cast function found for return type %s", returnType.getName()));
         }
 
         @Override
@@ -631,10 +644,10 @@ public class ExpressionAnalyzer {
             Symbol argument = node.getValue().accept(this, context);
             return allocateFunction(
                 NotPredicate.NAME,
-                ImmutableList.of(
+                List.of(
                     allocateFunction(
                         io.crate.expression.predicate.IsNullPredicate.NAME,
-                        ImmutableList.of(argument),
+                        List.of(argument),
                         context)),
                 context);
         }
@@ -705,7 +718,7 @@ public class ExpressionAnalyzer {
                     throw new UnsupportedOperationException(
                         "Unsupported logical binary expression " + node.getType().name());
             }
-            List<Symbol> arguments = ImmutableList.of(
+            List<Symbol> arguments = List.of(
                 node.getLeft().accept(this, context),
                 node.getRight().accept(this, context)
             );
@@ -717,7 +730,7 @@ public class ExpressionAnalyzer {
             Symbol argument = node.getValue().accept(this, context);
             return allocateFunction(
                 NotPredicate.NAME,
-                ImmutableList.of(argument),
+                List.of(argument),
                 context);
         }
 
@@ -753,7 +766,7 @@ public class ExpressionAnalyzer {
             }
             return allocateFunction(
                 operatorName,
-                ImmutableList.of(leftSymbol, arraySymbol),
+                List.of(leftSymbol, arraySymbol),
                 context);
         }
 
@@ -766,7 +779,7 @@ public class ExpressionAnalyzer {
             Symbol leftSymbol = node.getPattern().accept(this, context);
             return allocateFunction(
                 LikeOperators.arrayOperatorName(node.inverse(), node.ignoreCase()),
-                ImmutableList.of(leftSymbol, arraySymbol),
+                List.of(leftSymbol, arraySymbol),
                 context);
         }
 
@@ -779,7 +792,7 @@ public class ExpressionAnalyzer {
             Symbol pattern = node.getPattern().accept(this, context);
             return allocateFunction(
                 LikeOperators.arrayOperatorName(node.ignoreCase()),
-                ImmutableList.of(expression, pattern),
+                List.of(expression, pattern),
                 context);
         }
 
@@ -787,7 +800,7 @@ public class ExpressionAnalyzer {
         protected Symbol visitIsNullPredicate(IsNullPredicate node, ExpressionAnalysisContext context) {
             Symbol value = node.getValue().accept(this, context);
 
-            return allocateFunction(io.crate.expression.predicate.IsNullPredicate.NAME, ImmutableList.of(value), context);
+            return allocateFunction(io.crate.expression.predicate.IsNullPredicate.NAME, List.of(value), context);
         }
 
         @Override
@@ -809,7 +822,7 @@ public class ExpressionAnalyzer {
 
             return allocateFunction(
                 node.getType().name().toLowerCase(Locale.ENGLISH),
-                ImmutableList.of(left, right),
+                List.of(left, right),
                 context);
         }
 
@@ -901,6 +914,11 @@ public class ExpressionAnalyzer {
         }
 
         @Override
+        protected Symbol visitIntegerLiteral(IntegerLiteral node, ExpressionAnalysisContext context) {
+            return Literal.of(node.getValue());
+        }
+
+        @Override
         protected Symbol visitNullLiteral(NullLiteral node, ExpressionAnalysisContext context) {
             return Literal.of(UndefinedType.INSTANCE, null);
         }
@@ -988,7 +1006,7 @@ public class ExpressionAnalyzer {
                 lte.arguments(),
                 context);
 
-            return allocateFunction(AndOperator.NAME, ImmutableList.of(gteFunc, lteFunc), context);
+            return allocateFunction(AndOperator.NAME, List.of(gteFunc, lteFunc), context);
         }
 
         @Override
@@ -1001,9 +1019,9 @@ public class ExpressionAnalyzer {
                 if (columnType == null) {
                     columnType = column.valueType();
                 }
-                Preconditions.checkArgument(
-                    column instanceof ScopedSymbol || column instanceof Reference,
-                    Symbols.format("can only MATCH on columns, not on %s", column));
+                if (!(column instanceof ScopedSymbol || column instanceof Reference)) {
+                    throw new IllegalArgumentException(Symbols.format("can only MATCH on columns, not on %s", column));
+                }
                 Symbol boost = ident.boost().accept(this, context);
                 identBoostMap.put(column, boost);
                 if (column instanceof ScopedSymbol) {
@@ -1141,16 +1159,15 @@ public class ExpressionAnalyzer {
                 filter,
                 windowDefinition);
         }
-        if (context.isEagerNormalizationAllowed() && functionInfo.isDeterministic()) {
-            return funcImpl.normalizeSymbol(newFunction, coordinatorTxnCtx);
-        }
         return newFunction;
     }
 
     private static void verifyTypesForMatch(Iterable<? extends Symbol> columns, DataType<?> columnType) {
-        Preconditions.checkArgument(
-            io.crate.expression.predicate.MatchPredicate.SUPPORTED_TYPES.contains(columnType),
-            String.format(Locale.ENGLISH, "Can only use MATCH on columns of type STRING or GEO_SHAPE, not on '%s'", columnType));
+        if (!io.crate.expression.predicate.MatchPredicate.SUPPORTED_TYPES.contains(columnType)) {
+            throw new IllegalArgumentException(String.format(
+                Locale.ENGLISH,
+                "Can only use MATCH on columns of type STRING or GEO_SHAPE, not on '%s'", columnType));
+        }
         for (Symbol column : columns) {
             if (!column.valueType().equals(columnType)) {
                 throw new IllegalArgumentException(String.format(
@@ -1162,14 +1179,14 @@ public class ExpressionAnalyzer {
     }
 
     private static void ensureResultTypesMatch(Collection<? extends Symbol> results) {
-        HashSet<DataType> resultTypes = new HashSet<>();
+        HashSet<DataType<?>> resultTypes = new HashSet<>(results.size());
         for (Symbol result : results) {
             resultTypes.add(result.valueType());
         }
         if (resultTypes.size() == 2 && !resultTypes.contains(DataTypes.UNDEFINED) || resultTypes.size() > 2) {
             throw new UnsupportedOperationException(String.format(Locale.ENGLISH,
                 "Data types of all result expressions of a CASE statement must be equal, found: %s",
-                resultTypes));
+                results.stream().map(Symbol::valueType).collect(toList())));
         }
     }
 
@@ -1268,9 +1285,9 @@ public class ExpressionAnalyzer {
         List<Symbol> arguments() {
             if (right == null) {
                 // this is the case if the comparison has been rewritten to not(eq(exp1, exp2))
-                return ImmutableList.of(left);
+                return List.of(left);
             }
-            return ImmutableList.of(left, right);
+            return List.of(left, right);
         }
     }
 }
