@@ -21,14 +21,13 @@
 
 package io.crate.execution.engine.collect.sources;
 
-import com.google.common.collect.ImmutableSet;
 import io.crate.execution.engine.collect.files.SqlFeatureContext;
-import io.crate.execution.engine.collect.files.SqlFeaturesIterable;
+import io.crate.execution.engine.collect.files.SqlFeatures;
 import io.crate.expression.reference.information.ColumnContext;
 import io.crate.expression.udf.UserDefinedFunctionsMetaData;
 import io.crate.metadata.ColumnIdent;
 import io.crate.metadata.FulltextAnalyzerResolver;
-import io.crate.metadata.FuncResolver;
+import io.crate.metadata.FunctionProvider;
 import io.crate.metadata.Functions;
 import io.crate.metadata.IndexParts;
 import io.crate.metadata.PartitionInfo;
@@ -59,6 +58,7 @@ import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.inject.Inject;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -78,8 +78,11 @@ public class InformationSchemaIterables implements ClusterStateListener {
 
     public static final String PK_SUFFIX = "_pk";
 
-    private static final Set<String> IGNORED_SCHEMAS =
-        ImmutableSet.of(InformationSchemaInfo.NAME, SysSchemaInfo.NAME, BlobSchemaInfo.NAME, PgCatalogSchemaInfo.NAME);
+    private static final Set<String> IGNORED_SCHEMAS = Set.of(
+        InformationSchemaInfo.NAME,
+        SysSchemaInfo.NAME,
+        BlobSchemaInfo.NAME,
+        PgCatalogSchemaInfo.NAME);
 
     private final Schemas schemas;
     private final Iterable<RelationInfo> relations;
@@ -88,7 +91,6 @@ public class InformationSchemaIterables implements ClusterStateListener {
     private final Iterable<ColumnContext> columns;
     private final Iterable<RelationInfo> primaryKeys;
     private final Iterable<ConstraintInfo> constraints;
-    private final SqlFeaturesIterable sqlFeatures;
     private final Iterable<Void> referentialConstraints;
     private final Iterable<PgIndexTable.Entry> pgIndices;
     private final Iterable<PgClassTable.Entry> pgClasses;
@@ -142,7 +144,6 @@ public class InformationSchemaIterables implements ClusterStateListener {
             .iterator();
 
         partitionInfos = new PartitionInfos(clusterService);
-        sqlFeatures = new SqlFeaturesIterable();
 
         referentialConstraints = emptyList();
         // these are initialized on a clusterState change
@@ -209,7 +210,7 @@ public class InformationSchemaIterables implements ClusterStateListener {
         return new PgIndexTable.Entry(OidHash.relationOid(tableInfo), OidHash.primaryKeyOid(tableInfo), positions);
     }
 
-    private PgProcTable.Entry pgProc(FuncResolver resolver) {
+    private PgProcTable.Entry pgProc(FunctionProvider resolver) {
         return PgProcTable.Entry.of(resolver.getSignature());
     }
 
@@ -263,7 +264,11 @@ public class InformationSchemaIterables implements ClusterStateListener {
     }
 
     public Iterable<SqlFeatureContext> features() {
-        return sqlFeatures;
+        try {
+            return SqlFeatures.loadFeatures();
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
     }
 
     public Iterable<PgClassTable.Entry> pgClasses() {
